[gd_scene load_steps=4 format=3 uid="uid://c3main0000001"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://c3arena000001" path="res://scenes/arena.tscn" id="2_arena"]
[ext_resource type="PackedScene" uid="uid://c3player00001" path="res://scenes/player.tscn" id="3_player"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Arena" parent="." instance=ExtResource("2_arena")]

[node name="Player1" parent="." instance=ExtResource("3_player")]
position = Vector2(96, 96)

[node name="Player2" parent="." instance=ExtResource("3_player")]
position = Vector2(736, 608)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(416, 352)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Player wins!"
horizontal_alignment = 1
vertical_alignment = 1
